# ctrlsrc.io-resources

./: README.md
2023/gpio-speed-esp32c3-esp32c6/code/: Cargo.toml  README.md  disassemble_function.sh  rust-toolchain.toml
2023/gpio-speed-esp32c3-esp32c6/code/.cargo/: config.toml
2023/gpio-speed-esp32c3-esp32c6/code/examples/: dedicated_gpio_four_pins_benchmark.rs  dedicated_gpio_one_pin_benchmark.rs  dedicated_gpio_one_pin_unrolled_loop_benchmark.rs  simple_gpio_one_pin_assembly_benchmark.rs  simple_gpio_one_pin_benchmark.rs
