[package]
authors = ["Timon Van Overveldt <reachme@timonvo.com>"]
edition = "2021"
license = "Apache-2.0"
name = "gpio-speed-esp32c6"
version = "0.1.0"

[dependencies]
esp-backtrace = { version = "0.7.0", features = [
  "exception-handler",
  "panic-handler",
  "print-uart",
] }
esp-println = { version = "0.6.0", features = ["log"] }
esp32c3_hal = { package = "esp32c3-hal", version = "0.12.0", optional = true }
esp32c6_hal = { package = "esp32c6-hal", version = "0.5.0", optional = true }
log = { version = "0.4.18" }

[features]
esp32c3 = ["esp-backtrace/esp32c3", "esp-println/esp32c3", "esp32c3_hal"]
esp32c6 = ["esp-backtrace/esp32c6", "esp-println/esp32c6", "esp32c6_hal"]
